# miepy

./: .envrc  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  download_materials.sh  pyproject.toml  setup.py  vcpkg.json
.build_wheels/: macos_wheels.sh  manylinux-wheels.sh  windows_wheels.bat  windows_wheels.txt
.conda/miepy/: meta.yaml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  bench_hexagonal.py  bench_jax.py  bench_jax_hex.py  bench_parallel.py  bench_scaling.py  bench_solver.py  bench_translation.py  bench_utils.py  run_all.py
benchmarks/results/: final_performance_branch.json
cpp/: CMakeLists.txt
cpp/src/: decomposition.cpp  decomposition.hpp  decomposition_pyb.cpp  flux.cpp  flux.hpp  flux_pyb.cpp  forces.cpp  forces.hpp  forces_pyb.cpp  indices.cpp  indices.hpp  interactions.cpp  interactions.hpp  interactions_pyb.cpp  main.cpp  main.hpp  main_py.cpp  main_pyb.cpp  other.cpp  other.hpp  special.cpp  special.hpp  special_pyb.cpp  vec.hpp  vsh_functions.cpp  vsh_functions.hpp  vsh_functions_pyb.cpp  vsh_translation.cpp  vsh_translation.hpp  vsh_translation_pyb.cpp
cpp/src/tmatrix/: NOTES.md  tmatrix_ebcm.cpp  tmatrix_ebcm.hpp  tmatrix_ebcm_nonaxial.cpp  tmatrix_ebcm_nonaxial.hpp  tmatrix_geometry.hpp  tmatrix_linalg.hpp  tmatrix_pyb.cpp  tmatrix_special.cpp  tmatrix_special.hpp  tmatrix_svwf.cpp  tmatrix_svwf.hpp  tmatrix_types.hpp
cpp/test/: debug.cpp
docs/: generalized_mie_theory.bib  generalized_mie_theory.tex
docs/vsh/: generalized_mie_theory.tex
examples/: 01_dielectric_sphere.py  02_ag_sphere.py  03_ag_shell.py  04_vary_index.py  05_fields.py  06_dimer.py  06_dimer_scattering.py  07_dimer_force.py  08_far_field.py  09_whispering_gallery.py  10_focused_gaussian.py  11_imaging.py  dimer.py  far_field.py  flux.py  force_test.py  full.py  gmt_single.py  gmt_test.py  hex_optical_trapping.py  incident_expansion.py  non-rec.py
examples/benchmarks/: cpp.py  main.py  sphere_chain.py  timer.py  tmatrix_chain.py
examples/benchmarks/parallel/: main.py  run.sh  timer.py  view.py
examples/dev/: fft_source.py
examples/fdtd_compare/: cube_dimer_forces.py  cube_near_fields.py  cube_scattering.py  cylinder_grid_forces_dielectric.py  cylinder_grid_forces_gold.py  cylinder_grid_scattering.py  ellipsoid_scattering.py  triangle_scattering.py
examples/tests/: analytic_forces.py  cruzan.py  dipole.py  expand_beam.py  flux.py  incident_expansion.py  maxwell.py  performance.py  pi_tau.py  vsh_orthogonality.py  vsh_translation.py
miepy/: __init__.py  cluster.py  constants.py  coordinates.py  cross_sections.py  flux.py  forces.py  gmt.py  interactions.py  interface.py  material_functions.py  mie_core_shell.py  mie_sphere.py  particles.py  sources.py  special_functions.py  sphere_cluster.py  temp.py  utils.py  vsh.py
miepy/material_functions/: create.py  load.py
miepy/materials/: __init__.py  create.py  load.py  material_struct.py  predefined.py
miepy/microscope/: microscope.py
miepy/mie_single/: __init__.py  mie_core_shell.py  mie_sphere.py  scattering.py
miepy/particles/: __init__.py  core_shell.py  cylinder.py  ellipsoid.py  particle_base.py  regular_prism.py  sphere.py  sphere_cluster_particle.py  spheroid.py
miepy/sources/: __init__.py  beams.py  common.py  decomposition.py  dft_beams.py  focused_beams.py  paraxial.py  paraxial_beams.py  plane_waves.py  point.py  slm_beam.py  source_base.py  sources.py
miepy/tmatrix/: __init__.py  axisymmetric_file.py  cluster_tmatrix.py  common.py  functions.py  get_tmatrix.py  non_axisymmetric_file.py  required_files.py  sphere_cluster_file.py  tmatrix.py
miepy/tmatrix/nfmds/: AdditonTh.f90  Allocation.f90  BesLeg.f90  Check.f90  EFMED.f90  GeomLib.f90  GeomTrans.f90  IncCoeff.f90  InputOutput.f90  Integr.f90  Interp.f90  MachParam.f90  MatrixOp.f90  MatrixQ.f90  MatrixSolv.f90  MatrixTrans.f90  OpenMP.f90  Parameters.f90  PostProces1.f90  PostProces1_original.f90  PostProces2.f90  PostProces3.f90  Proces1.f90  Proces2.f90  Proces3.f90  README.txt  Random.f90  SCT.f90  SCTAVRGSPH.f90  SVWF.f90  TAXSYM.f90  TCOMP.f90  TINHOM.f90  TINHOM2SPH.f90  TINHOMSPH.f90  TINHOMSPHREC.f90  TLAY.f90  TMATRIX.f90  TMULT.f90  TMULT2SPH.f90  (+15 more)
miepy/visual/: __init__.py  view3d.py
miepy/vsh/: __init__.py  cluster_coefficients.py  decomposition.py  expansion.py  misc.py  mode_indices.py  special.py  vsh_functions.py  vsh_rotation.py  vsh_translation.py
src/miepy/: __init__.py  cli.py  cluster.py  constants.py  coordinates.py  flux.py  forces.py  interactions.py  interface.py  special_functions.py  sphere_cluster.py  symmetry.py  utils.py
src/miepy/backends/: __init__.py
src/miepy/examples/: 02_ag_sphere.py  03_ag_shell.py  07_dimer_force.py  08_far_field.py  09_whispering_gallery.py  11_imaging.py  __init__.py
src/miepy/material_functions/: __init__.py  create.py  load.py  material_struct.py
src/miepy/materials/: predefined.py
src/miepy/microscope/: __init__.py  microscope.py
src/miepy/mie_single/: __init__.py  mie_core_shell.py  mie_sphere.py  scattering.py
src/miepy/particles/: __init__.py  core_shell.py  cylinder.py  ellipsoid.py  particle_base.py  regular_prism.py  sphere.py  sphere_cluster_particle.py  spheroid.py
src/miepy/sources/: __init__.py  beams.py  common.py  (+8 more)
tests/: FDTD.md  bug.py  cross_section_methods.py  fdtd_validation.py  test_beam_power.py  test_cluster.py  test_cluster_coefficients.py  test_coordinate_geometry.py  test_core_shell.py  test_cross_sections.py  test_decomposition.py  test_ellipsoid.py  test_far_field.py  test_fdtd_comparison.py  test_fields.py  test_force.py  test_gaussian_beam.py  test_interface.py  test_jax_end_to_end.py  test_jax_special.py  test_maxwells_equations.py  test_medium.py  test_near_to_far.py  test_point_matching.py  test_power.py  test_poynting_vector.py  test_single_gmt.py  test_source_decomposition.py  test_source_rotation.py  test_tight_focusing.py  test_tmatrix.py  test_tmatrix_cpp.py  test_tmatrix_validation.py  test_vsh_translation.py  test_weak_focusing.py  tmatrix.py
(+62 files in other folders)
